# noteslab-web

./: .gitmodules  Cargo.toml  README.md
noteslab-data-uniffi/: Cargo.toml  build.rs  build.sh  release.sh  rust-toolchain.toml  testrelease.sh
noteslab-data-uniffi/src/: html.rs  lib.rs  noteslab.udl
noteslab-data-uniffi/src/ffi/: folder.rs  note.rs  resource.rs  status.rs  sync_info.rs
src/: main.rs
